--- a/src/containers/Chat/ChatBox.css
+++ b/src/containers/Chat/ChatBox.css
@@ -5,7 +5,6 @@
     margin-bottom: 20px;
     width: 100%;
     max-height: 300px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .ChatBoxHeader {
@@ -40,6 +39,6 @@
     border-radius: 15px;
 }
 
-.Input:focus{
+.Input:focus {
     outline: none;
 }
